--- a/1408.3203/QXSPaper.tex
+++ b/1408.3203/QXSPaper.tex
@@ -1,6 +1,5 @@
 \documentclass[12pt]{article}
 \usepackage{amssymb,amsmath,amsthm,graphicx,ulem}
-\usepackage[linktoc=page]{hyperref}
 
 %\pdfoutput=1
 
@@ -12,7 +11,6 @@
 \usepackage[usenames]{color}
 %\usepackage{pstricks,pst-coil,pst-plot,pst-3dplot,pst-node}
 %\usepackage{pst-grad}
-\usepackage[letterpaper,left=2.cm,right=2.cm,top=2.5cm,bottom=2.5cm]{geometry}
 \usepackage[T1]{fontenc}
 \newtheorem{thm}{Theorem}[section]
 \newenvironment{definition}[1][Definition:]{\begin{trivlist}
@@ -95,7 +93,41 @@
 \numberwithin{equation}{section}
 
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 
 \numberwithin{equation}{section}
@@ -143,8 +175,7 @@ We propose that holographic entanglement entropy can be calculated at arbitrary 
 
 \tableofcontents
 
-\baselineskip16pt
-
+\newpage
 
 \section{Introduction}\label{intro}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
