--- a/1408.3203/QXSPaper.tex
+++ b/1408.3203/QXSPaper.tex
@@ -201,7 +201,7 @@ The similarity of Eq. \ref{introFLM} with that for black hole entropy \ref{Sgen}
 
 In fact we can define $S_\mathrm{gen}$ more generally on a very broad class of surfaces.  Although it is tempting to call $S_\mathrm{gen}$ of the horizon ``\emph{the} black hole entropy'', in fact there are many possible surfaces one could choose on any given spacetime background, and these surfaces may also have a statistical interpretation \cite{Sorkin83, Jacobson95, BianchiMyers12, Balasubramanian:2013lsa, Myers:2014jia, Czech:2014wka}.  The only necessary ingredient is an entangling surface $E$, defined as any spacelike codimension 2 surface which divides a Cauchy surface $\Sigma$ into two pieces.  Let $\mathrm{Ext}(E)$ be that side of $\Sigma$ which is outside $E$, and let $\mathrm{Int}(E)$ be the side which is inside $E$.  We can then define $S_\mathrm{out}(E)$ as the entanglement entropy in the spatial region $\mathrm{Ext}(E)$, and take $S_{\text{gen}}$ as in Eq. \ref{Sgen}, although here $S_{\text{gen}}$ is evaluated on $E$ as opposed to the spatial slice of a horizon.  See Fig. \ref{EntanglingSurface}. By unitarity, any choice of $\Sigma$ passing through $E$ defines the same entropy, so $S_\mathrm{gen}(E)$ does not depend on the choice of $\Sigma$.\footnote{This statement fails in theories with a gravitational anomaly \cite{Wall:2011kb, WallIqbal}.}  
 
-\begin{figure}[ht]
+\begin{figure}[t]
 \begin{center}
 \includegraphics[width=8cm]{EntanglingSurface.pdf} 
 \caption{A surface $E$ splits an AdS-Cauchy slice $\Sigma$ into Ext$(E)$ and Int$(E)$. The generalized entropy can be defined with respect to either side, depending on whether we pick $S_{in}$ or $S_{out}$ to calculate $S_{\text{gen}}$. In the case where the state is pure, the choices yield identical results.
@@ -281,7 +281,7 @@ While the mathematical notions of extremal and (marginally) trapped surfaces rem
 Let $\mathcal{T}$ be a codimension 2 spacelike surface on a Cauchy surface\footnote{Technically AdS space is not globally hyperbolic due to the existence of a timelike boundary at infinity, but its causal properties are still fine assuming that there are boundary conditions at infinity.  We can define a spacelike slice $\Sigma$ in the spacetime $\mathcal{M}$ to be an AdS-Cauchy surface if $\Sigma$ is a Cauchy surface in $\mathcal{M}$ once $\partial \mathcal{M}$ has been conformally compactified. We further define a spacetime to be AdS-hyperbolic, in keeping with \cite{WallMaximin}, if (1) it has no closed causal curves, and (2) for any two points $x$ and $y$ in $\mathcal{M}$, $J^{+}(x)\cap J^{-}(y)$ is compact after conformal compactification of the AdS boundary. These two conditions are equivalent to requiring the existence of an AdS-Cauchy surface. The definitions above allow us to assume a reasonable causal structure without relinquishing relevance to AdS/CFT. } $\Sigma$, and let $\delta \mathcal{T}^{a}$ be as above. If, for any future-directed generator $k^{a}$ of a null congruence on $\mathcal{T}$
 \begin{equation} \frac{\delta S_\mathrm{gen}}{\delta \mathcal{T}^{a}}k^{a}<0 \label{quantumtrapped} \end{equation}
 then $\mathcal{T}$ is a quantum trapped surface. This definition was first introduced in \cite{Wall12}. A surface $\mathcal{T}$ is therefore quantum trapped if its generalized entropy decreases when it is evolved forwards in time along any future-directed null congruence on $\mathcal{T}$. Since in the classical limit, $S_\mathrm{gen}\propto A$, we recover in this regime the definition of a classical trapped surface. If the inequality sign in Eq. \ref{quantumtrapped} is replaced by an equality, we obtain a quantum marginally trapped surface.
-\begin{center}
+
 \begin{figure}[t]
 \centering
 
@@ -297,8 +297,6 @@ then $\mathcal{T}$ is a quantum trapped surface. This definition was first intro
 \caption{ (a) {\small $\mathcal{T}$ is a quantum trapped surface with infinitesimal normal $\vec{\delta \mathcal{T}}$, and $N$ is the null surface generated from null congruences shot from $\mathcal{T}$. We could consider variations of $S_{\mathrm{gen}}$ in any direction $\delta \vec{T}$, but we take them only in the direction $\vec{k}$, which is a null generator of $N$. $\mathcal{T}$ is quantum trapped, so we know that the generalized entropy on $\mathcal{T}$ along $\vec{k}$ must be strictly decreasing.} (b) There are two possible directions in which one could deform a codimension 2 surface. $\delta T^{a}$ is defined as any combination of the two.}
 \label{Thm3}
 \end{figure}
-\end{center}
-
 
 The extension to quantum extremal surfaces follows naturally---just as a classical extremal surface is marginally trapped in both past- and future- directions, a quantum extremal surface $\mathcal{X}$ is quantum marginally trapped in both directions:
 \begin{equation} \frac{\delta S_\mathrm{gen}}{\delta \mathcal{X}^{a}}=0\end{equation}
@@ -460,7 +458,7 @@ I_R = I^+(D_R) \cup I^-(D_R).
 \end{equation}
 (The weaker result that $X_R$ does not lie in the wedge $W_R$, was proven in \cite{HubenyRangamani}.)  In the case where $R$ is taken to be an entire asymptotic boundary, this result reduces to the classic theorem that trapped surfaces are enclosed by event horizons \cite{HawkingEllis,Wald}
 
-\begin{figure}[ht]
+\begin{figure}[t]
 \begin{center}
 \includegraphics[width=5cm]{CausalSurfacev3.pdf} 
 \caption{{\small The causal surface $C_R$ is the spacelike boundary of the causal wedge (depicted in green) associated with $R$. The domain of dependence $D_{R}$ of $R$ is depicted in purple. The quantum extremal surface $\mathcal{X}_{R}$ does not intersect the causal wedge.}}
@@ -486,7 +484,7 @@ The surface $\mathcal{X}_{R}$ is moreover generically spacelike separated from t
 
 Assume for contradiction that $C_{R}\cap \  \textbf{Int}(\mathcal{X}_{R})\neq \emptyset$.  Consider continuously shrinking $D_R$ to a new boundary spacetime region $\Xi$ (not necessarily a domain of dependence) such that the causal surface $C_\Xi = \partial I^+(\Xi) \cap \partial I^-(\Xi)$ is entirely contained in \textbf{Ext}$(\mathcal{X}_{R})$.  Let $H^+_\Xi = \partial I^-(\Xi)$ be the associated future causal horizon, and $H^-_\Xi = I^+(\Xi)$ the past horizon.  Because the shrinking action is continuous, we can find a choice of $\Xi$ such that $H^\pm_\Xi$ coincides with $\mathcal{X}_{R}$ at some points $\{p\}$ and is tangent to it at those points, and elsewhere lies in \textbf{Ext}$(\mathcal{X}_{R})$.  Without loss of generality, we consider the case in which it coincides with $H^+$; the case of $H^-$ is exactly the same except that we would need to use the time reverse of the GSL below.  This is illustrated in Fig. \ref{Daleth}.
 
-\begin{figure}[ht]
+\begin{figure}[t]
 \begin{center}
 \includegraphics[width=7cm]{CausalSurfaceDefv2.pdf} 
 \caption{\small{A projection of $H^{+}_{R}$ (depicted in red) and $H^{+}_{\Xi}$ (depicted in blue) onto a slice $\Sigma$ passing through $\mathcal{X}_{R}$ (dashed black).}}
@@ -536,7 +534,7 @@ Suppose we throw some causal signals in from the boundary.  We could do this by 
 
 At any finite order in $\hbar$, the resulting signal will propagate locally within the bulk, so it can also reach the past or future of $W_R$.  Thus, if we act with a single unitary operator $U(t)$, this implies that the signal must remain within the causal domain of influence $I_R = I^+(W_R) \cup I^-(W_R)$, and thus does not extend past $C_R$ in a spacelike direction.  So the pulse cannot reach the quantum extremal surface ${\cal X}_R$, since by Theorem \ref{causal}, ${\cal X}_R$ is spacelike outside of $C_R$.  Hence the area of ${\cal X}_R$ cannot be affected, and neither can $S_\mathrm{ent}$ be affected since the operator is unitary.  See Fig. \ref{CausalSignal}.  ${\cal X}_R$, its area, and anything behind it are therefore identical in the perturbed and unperturbed spacetimes.
 
-\begin{figure}[ht]
+\begin{figure}[t]
 \begin{center}
 \includegraphics[width=5cm]{CausalSignalsv2.pdf} 
 \caption{\small{A conformal diagram illustrating the fact that $\mathcal{X}_{R}$ cannot be affected by unitary operators on $R$, since the resulting causal signals remain within the domain of influence $I_R$ (consisting of the top, bottom, and rightmost quadrants)}}
