--- a/0901.3865/gsl.tex
+++ b/0901.3865/gsl.tex
@@ -1,13 +1,49 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage{amssymb}
 \usepackage{verbatim}
 \usepackage{lscape}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \author{Aron C. Wall\footnote{aronwall@umd.edu}
 \\ \textit{Maryland Center for Fundamental Physics} \\ \textit{Department of Physics} \\ \textit{University of Maryland} \\ \textit{College Park, MD 20740-4111, USA} }
 \title{Ten Proofs of the Generalized Second Law}
-\date{\today}
+\date{30 Oct 2009}
 
 \begin{document}
 
@@ -162,7 +198,8 @@ Each horizon generator carries an infinitesimal amount of horizon area.  The cha
 + 8\pi G T_{ab}k^ak^b,
 \end{equation}
 where $\theta = (1/A)({dA}/{d\lambda})$ is the expansion parameter, $\sigma$ is the shear tensor, and $k^a$ is a null vector on the horizon of unit affine length.\footnote{I.e. $\lambda_{;a} k^a = 1$ on the horizon generator.}  Since the right hand side of this equation is always positive by the null energy condition, a horizon generator with negative expansion is ``trapped'' and must terminate in the future at a finite value of the affine parameter.  It cannot terminate on a singularity because by assumption there are no singularities on the horizon.  Nor can it leave the horizon because it is impossible for generators to leave a future horizon.  Consequently, since all horizon generators have nondecreasing area and any new generators appearing on the horizon only add even more area, the area cannot decrease.  Consult Ref. \cite{WALDBOOK} for the full details of the area increase theorem.
-This may be regarded as the first proof of the GSL, limited to the classical regime in which $S_{out}$ is negligible compared to $S_{BH} = A/4$.
+
+This may be regarded as the first proof of the GSL, limited to the classical regime in which $S_{out}$ is negligible compared to $S_{BH} = A/4$.
 
 \subsubsection{The Hydrodynamic Approximation}\label{hydro}
 
@@ -912,7 +949,8 @@ In summary, FPST have assumed so far that:
 \item the system is described by the RST model,
 \item the generalized entropy is given by $S_{tot} = S_{FG} + S_{BH} + S_{BO}$ on the apparent horizon, and
 \item no energy falls into the black hole prior to the formation of the event horizon.
-\end{enumerate}They have also calculated each of the three terms in the generalized entropy.
+\end{enumerate}
+They have also calculated each of the three terms in the generalized entropy.
 
 The first step is to add up the expression $S_{FG} + S_{BH} + S_{BO}$ in order to obtain the total entropy.  They begin by adding the first two terms (\ref{FG}) and (\ref{BH}) together, and then using (\ref{Omega}) to re-express the result in terms of $\Omega$ instead of $\phi$.  The result is
 \begin{equation}\label{two}
