--- a/1304.4926/EntanglementRevised.tex
+++ b/1304.4926/EntanglementRevised.tex
@@ -1,11 +1,11 @@
 
 
 
- \input ../helpers/harvmac.tex
+ \input ../helpers/harvmac-psu.tex
  \input epsf.tex
  \input amssym
 
-
+\overfullrule=0pt
 % \input toc.tex
 
 % \draftmode
@@ -26,6 +26,7 @@
 Fig.~\the\figno:} #2}}
 \bigskip\endinsert\global\advance\figno by1}
 
+\raggedbottom
 
 % TO INCLUDE FIGURES DO AS BELOW
 %\ifig\LABEL{  WRITE CAPTION } {\epsfxsize1.5in\epsfbox{FILENAME.eps}}
@@ -2093,7 +2094,7 @@ And the later expression can be straightforwardly evaluated, using\foot{We defin
 $\sqrt{g} T_{\mu \nu}={\partial \sqrt{g} {\cal{L}} \over \partial g^{\mu \nu}}$ ,
 \eqn\EEscala{\eqalign{
 -\partial_n [ \log Z^{\rm matter}(n) ]_{2 \pi}
- = &  \int_0^{2 \pi}  d\tau  \int dx dr \sqrt{g} \left (T_{\mu \nu}\frac{\partial g^{\mu \nu}}{\partial n}+ \frac{\partial \cal{L}}{\partial \phi} \partial_n \phi+ \frac{\partial \cal{L}}{\partial (\partial_{\mu}\phi) } \partial_n \partial^{\mu} \phi \right )=
+ = &  \int_0^{2 \pi}  d\tau  \int dx dr \sqrt{g} \left (T_{\mu \nu}\frac{\partial g^{\mu \nu}}{\partial n}+ \frac{\partial \cal{L}}{\partial \phi} \partial_n \phi+ \frac{\partial \cal{L}}{\partial (\partial_{\mu}\phi) } \partial_n \partial^{\mu} \phi \right )
 \cr =& \int_0^{2 \pi }  d\tau \int dxdr  \sqrt{g} T_{\mu \nu}\frac{\partial g^{\mu \nu}}{\partial n}
 }}
  In the last line we used the equations of motion (of course $\frac{\delta S}{\delta \phi}=0$). One can check that the expression with the stress energy tensor gives us $\sqrt{g} T_{\mu \nu}\frac{\partial g^{\mu \nu}}{\partial n} |_{n=1}=-2 \eta^2 r f'^2$, so
@@ -2249,7 +2250,7 @@ conical spaces that appear in the field theory discussion of the replica trick.
 
 
 
-
+\raggedright
 
 \listrefs
 
