--- a/1307.2892/RevisedSubmitted.tex
+++ b/1307.2892/RevisedSubmitted.tex
@@ -126,6 +126,8 @@ bookmarksopenlevel=10
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
+\sloppy
+\raggedbottom
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/mnsymbol.tex}
@@ -461,16 +463,16 @@ UV regulator that is local and general covariant so that the discussion is valid
 
 We can now write the expression for the quantum correction as
 \bea
-S_q  &=&- \partial_n \left(  \log Z_{q,n} - n \log Z_{q,1} \right)_{n=1} =
--\partial_n( \log  Tr[ \hat \rho_n^n] - n \log Tr[\hat \rho_1]  ) _{n=1} =
-\cr
+S_q  &=&- \partial_n \left(  \log Z_{q,n} - n \log Z_{q,1} \right)_{n=1} \cr
+&=&
+-\partial_n( \log  Tr[ \hat \rho_n^n] - n \log Tr[\hat \rho_1]  ) _{n=1} \cr
  &=&
 % - \partial_n ( \log Tr[  \rho_1^n ]  - n \log Tr[ \rho_1 ] )_{n=1} -  {
 % Tr[ \partial_n \hat  \rho_n ] |_{n=1} \over Tr[ \rho_1 ] }  =
 S_{\rm bulk-ent} + S_{\cdots}
 \cr
-S_{\rm bulk-ent} &=& - \partial_n ( \log Tr[  \rho_1^n ]  - n \log Tr[ \rho_1 ] )_{n=1} ~,~~~~~~~~~~~
-S_{\cdots} \equiv -  {
+S_{\rm bulk-ent} &=& - \partial_n ( \log Tr[  \rho_1^n ]  - n \log Tr[ \rho_1 ] )_{n=1},\cr\cr
+S_{\cdots} &\equiv&  -  {
 Tr[ \partial_n \hat  \rho_n ] |_{n=1} \over Tr[ \rho_1 ] }
 \eea
 Here $S_{\rm bulk-ent}$  involves only $\rho_1 \equiv \hat \rho_1$,  which is the
@@ -486,10 +488,12 @@ The Lagragian, ${\cal L}(\hat g_n , h, \varphi)$,
 depends on the background metric and the small fluctuations of all the fields: the metric
 fluctuations, $h$, as well as all the other fields denoted by $\varphi$.
 We can then write
-\be \la{Dots}
-S_{\cdots}  = \langle  \int d\tau \partial_n {\cal L } \rangle =
+\begin{align}
+\la{Dots}
+S_{\cdots}  & = \langle  \int d\tau \partial_n {\cal L } \rangle \cr
+& = 
 \int d\tau  \langle E_{\mu \nu}(\hat g + h,\varphi) \partial_n \hat g^{\mu \nu } + d \Theta( \hat g , h,\varphi ; \partial_n \hat g ) \rangle  - \int d\tau d\Theta( \hat g , \partial_n g )
-\ee
+\end{align}
 where the brackets indicate quantum expectation values. In other words, we integrate over
 the fields $h$ and $\varphi$.
 %\footnote{
