--- a/hep-th-0405152/noteadded.tex
+++ b/hep-th-0405152/noteadded.tex
@@ -1,6 +1,41 @@
-\documentclass[preprint,aps]{revtex4}
+\documentclass[12pt,aps]{revtex4}
 %\documentstyle[preprint,aps,epsf,epsfig,rotate,floats]{revtex4}
 %\documentstyle[prl,aps,multicol,epsf,rotate]{revtex}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{epsfig}
 %
@@ -429,14 +464,14 @@ where $\Phi_{\pm n}$ are normalised so that
 $\langle \Phi_n(u)\Phi_{-n}(v)\rangle_{\bf C}=|v-u|^{-2\Delta_n
 -2\overline\Delta_n}$. (\ref{TPP}) is equivalent to the
 conformal Ward identity\cite{BPZ}
-\begin{equation}
+\begin{multline}
 \label{WI}
-\langle T(w)\Phi_n(u)\Phi_{-n}(v)\rangle_{\bf C}=
+\langle T(w)\Phi_n(u)\Phi_{-n}(v)\rangle_{\bf C}=\\
 \left({\Delta_n\over(w-u)^2}+{\Delta_n\over(w-v)^2}
 +{1\over w-u}{\partial\over\partial u}+
 {1\over w-v}{\partial\over\partial v}\right)
 \langle\Phi_n(u)\Phi_{-n}(v)\rangle_{\bf C}\,.
-\end{equation}
+\end{multline}
 In writing the above, we are assuming that $w$ is a complex coordinate
 on a single sheet $\bf C$, which is now decoupled from the others.
 We have therefore shown that
@@ -695,12 +730,12 @@ from each other, in comparison to their lengths.
 
 Differentiating with respect to $n$ and setting $n=1$,
 we find our main result of this section
-\begin{equation}
+\begin{multline}
 \label{general}
-S_A=\frac c3\left(\sum_{j\leq k}\log\big((v_k-u_j)/a\big)
+S_A=\frac c3\Bigl(\sum_{j\leq k}\log\big((v_k-u_j)/a\big)
 -\sum_{j<k}\log\big((u_k-u_j)/a\big)-\sum_{j<k}\log\big((v_k-v_j)/a\big)
-\right)+Nc_1'\,.
-\end{equation}
+\Bigr)\\ +Nc_1'\,.
+\end{multline}
 
 A similar expression holds in the case of a boundary, with half of the
 $w_i$ corresponding to the image points.
@@ -942,13 +977,13 @@ where $B_{2n}$ are the Bernoulli numbers \cite{as}.
 Using standard identities of the Bessel function (namely
 $\partial_k K_k(x)|_{k=0}=0$ and
 $\partial_k I_k(x)|_{k=0}=-K_0(k)$ \cite{as}), we obtain
-\be
+\begin{multline}
 G_n(r)=
-2 \int_0^\infty dk I_{k/n} (m r) K_{k/n} (mr)F(k/n\Lambda)+\frac{1}{6n} K_0^2 (mr)\,
+2 \int_0^\infty dk I_{k/n} (m r) K_{k/n} (mr)F(k/n\Lambda)+ \\ \frac{1}{6n} K_0^2 (mr)\,
 +\int_0^\infty r dr
 \sum_{j\geq 1} \frac{B_{2j}}{(2j)!n^{2j+1}} D_{2j +1}(r)\,,
 \label{Greml}
-\ee
+\end{multline}
 where we define
 $D_i(x)=\partial^i(I_k(x) K_k(x))/\partial k^i|_{k=0}$.
 In the last term in Eq. (\ref{Greml})
@@ -1106,10 +1141,11 @@ number $\hat{n}_i$ (with eigenvalues $0$ and $1$) is \cite{pkl-99}
 The energy levels are
 \be
 \e_j=
-\left\{\matrix{
+\left\{
+\begin{matrix}
 (2j+1)\e &\quad {\rm for} \,\lambda<1\,,\cr
 2j\e     &\quad {\rm for} \,\lambda>1\,,
-}\right.
+\end{matrix}\right.
 \quad {\rm with}\;
 \e=\pi \frac{K(\sqrt{1-k^2})}{K(k)}\,
 \ee
@@ -1750,14 +1786,14 @@ $$
 N_{i,k}=\frac{d_k}{2\pi n}\frac{2/L^2}{J^2_{k/n+1}(\alpha_{k/n,i})}\,.
 $$
 that gives the Green function
-\be
-G(r,\theta,r',\theta')=
+\begin{multline}
+G(r,\theta,r',\theta')=\\
 \frac{1}{2\pi n} \sum_{k=0}^\infty d_k \sum_{i=1}^\infty
 \frac{2/L^2}{J_{k/n+1}^2(\alpha_{k/n,i})}
 \frac{J_{k/n}(\alpha_{k/n,i}r/L)J_{k/n}(\alpha_{k/n,i}r'/L)}{\alpha_{k/n,i}^2/L^2+m^2}
 {\cal C}_k(\theta,\theta')\,.
 \label{2ptL}
-\ee
+\end{multline}
 The factor $d_k$ comes from $\int_0^{2\pi} 1dx =2\pi$ and
 $\int_0^{2\pi}dx  \cos^2  x= \int_0^{2\pi}dx  \sin^2  x  =\pi$.
 
