--- a/1907.08126/EElectures.tex
+++ b/1907.08126/EElectures.tex
@@ -38,6 +38,41 @@
 \DeclareMathOperator{\area}{area}
 \DeclareMathOperator{\vol}{vol}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \title{\boldmath Lectures on entanglement entropy in field theory and holography
 }
@@ -51,13 +86,13 @@
 These notes, based on lectures given at various schools over the last few years, aim to provide an introduction to entanglement entropies in quantum field theories, including holographic ones. We explore basic properties and simple examples of entanglement entropies, mostly in two dimensions, with an emphasis on physical rather than formal aspects of the subject. In the holographic case, the focus is on how the Ryu-Takayanagi formula geometrically realizes general features of field-theory entanglement, while revealing special properties of holographic theories. In order to make the notes somewhat self-contained for readers whose background is in high-energy theory, a brief introduction to the relevant aspects of quantum information theory is included.
 }
 
-\preprint{BRX-TH-6653}
 
-
+\date{18 Jul 2019}
 
 \begin{document} 
 \maketitle
-\flushbottom
+\raggedbottom
+\newpage
 
 \section{Introduction}
 \label{sec:intro}
