--- a/1010.5513/sing3.tex
+++ b/1010.5513/sing3.tex
@@ -1,4 +1,5 @@
-\documentclass{article}
+
+\documentclass[12pt]{article}
 %\documentclass[12pt,a4paper]{article}
 %\usepackage{setspace}
 %\textheight = 21.5truecm
@@ -6,13 +7,49 @@
 %\textwidth = 15.2truecm
 %\hoffset = -.4truecm
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \usepackage{graphicx}
 \usepackage{wasysym}
 
 \author{Aron C. Wall\footnote{aronwall@umd.edu}
 \\ \textit{Maryland Center for Fundamental Physics} \\ \textit{Department of Physics} \\ \textit{University of Maryland} \\ \textit{College Park, MD 20740-4111, USA} }
 \title{The Generalized Second Law implies a Quantum Singularity Theorem}
-\date{\today}
+\date{6 Dec 2016}
 
 \begin{document}
 
