--- a/1804.10610v2/BHT9.tex
+++ b/1804.10610v2/BHT9.tex
@@ -1,19 +1,54 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt]{article}
 
 \usepackage{graphicx}
 \usepackage{amsmath,amssymb,mathrsfs}
 \usepackage{cite}
 \usepackage{bm}
 \usepackage{color}
-\usepackage{hyperref}
 \usepackage{enumerate}
 \usepackage{enumitem}
 \usepackage{verbatim}
 \usepackage{gensymb}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \usepackage{setspace}
 %\onehalfspacing
-\date{\today}
+\date{11 Jul 2018}
 
 \def\be{\begin{equation}}
 \def\ee{\end{equation}}
@@ -50,6 +85,8 @@ This is an introductory, up-to-date review of the essentials of black hole therm
 
 \newpage
 \tableofcontents
+
+\newpage
 
 \section{Introduction}
 
