fonts and bullshit

--- a/1204.6349/graventanglement-0426.tex
+++ b/1204.6349/graventanglement-0426.tex
@@ -1,9 +1,40 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \usepackage{amsmath, amssymb}
 \usepackage{amsbsy}
 \usepackage{undertilde}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage{amssymb}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 
-\usepackage{hyperref}
+% the lucida varphi is hideous
+\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+
+\input{../helpers/fix-underbrace.tex}
+\input{../helpers/fix-revtex-12.tex}
+\usepackage{cite}
+
+
 
 \def\prd{Physical Review D}
 
