--- a/1204.6349/graventanglement-0426.tex
+++ b/1204.6349/graventanglement-0426.tex
@@ -2,7 +2,9 @@
 \usepackage{amsmath, amssymb}
 \usepackage{amsbsy}
 \usepackage{undertilde}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -15,24 +17,26 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{amssymb}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-\usepackage[altbullet]{lucidabr}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
-\usepackage[small]{titlesec}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
 
-% the lucida varphi is hideous
-\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
-\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
-
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
-\input{../helpers/fix-revtex-12.tex}
+
+\usepackage[small]{titlesec}
 \usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 
 
