--- a/2004.13857/rst-paper.tex
+++ b/2004.13857/rst-paper.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,oneside,letterpaper]{article}
+\documentclass[12pt,oneside,letterpaper]{article}
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage[dvips]{graphicx}
@@ -17,6 +17,43 @@
 \definecolor{darkgreen}{rgb}{0,0.5,0}
 \definecolor{darkblue}{rgb}{0,0,0.6}
 \definecolor{purple}{rgb}{0.4,.2,0.7}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \newcommand{\p}{\partial}
 \newcommand{\h}{\theta}
 \newcommand{\f}{\frac}
@@ -29,7 +66,6 @@
 
 
 \newcommand{\tbar}{\widetilde{T}}
-\usepackage[colorlinks=true,citecolor=darkgreen,linkcolor=black,urlcolor=purple]{hyperref}
 
 %\documentclass[11pt,english]{article}
 %\usepackage{verbatim,bigints, mathtools, jheppub, hyperref}
@@ -111,11 +147,6 @@
 \interfootnotelinepenalty=10000
 
 
-\addtolength{\oddsidemargin}{-0.500in}
-\addtolength{\textwidth}{1.1in}
-\addtolength{\topmargin}{-0.500in}
-\addtolength{\textheight}{0.700in}
-
 \allowdisplaybreaks  % allow page breaks in displayed eqs
 
 %\pagestyle{myheadings}
@@ -142,12 +173,8 @@
 
 
 \begin{document}
-\onehalfspacing
 
 \begin{center}
-
-~
-\vskip3cm
 
 {\LARGE \bf { Islands in Asymptotically Flat 2D  Gravity
 \\
@@ -199,7 +226,7 @@ contrast, it follows the unitary Page curve. The relation of these two observati
 
 %\setcounter{tocdepth}{1}
 %\newpage
-
+\newpage
 
 \section{Introduction}
 
