--- a/gr-qc-9504004/9504004.tex
+++ b/gr-qc-9504004/9504004.tex
@@ -6,7 +6,44 @@
 %%%  Thermodynamics of Spacetime: The Einstein Equation of State
 %%%  Ted Jacobson
 %%%
-\documentstyle[11pt]{article}
+\documentclass[12pt]{article}
+\usepackage{graphicx}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \begin{document}
 
 \begin{flushright}
@@ -235,6 +272,18 @@ d\lambda d{\cal A}.
 \label{dQ}
 \end{equation}
 
+\begin{figure}[t]
+\begin{center}
+\includegraphics[height=3in]{tosfig.pdf}
+\end{center}
+\caption{Spacetime diagram showing the heat flux $\delta Q$
+across the local Rindler horizon $\cal H$ of a 2-surface element
+$\cal P$. Each point in the diagram represents a two dimensional
+spacelike surface. The hyperbola is a uniformly accelerated worldline,
+and $\chi^a$ is the approximate boost Killing vector on $\cal H$.}
+\end{figure}
+
+
 Assume now that the entropy is proportional to the horizon
 area, so the entropy variation associated with a piece of the
 horizon satisfies $dS=\eta\, \delta{\cal A}$, where $\delta{\cal A}$ is
@@ -439,12 +488,6 @@ in {\sl Phys. Rev. D}.
 
 \end{thebibliography}
 
-\vskip 1cm
-\noindent FIGURE 1: Spacetime diagram showing the heat flux $\delta Q$
-across the local Rindler horizon $\cal H$ of a 2-surface element
-$\cal P$. Each point in the diagram represents a two dimensional
-spacelike surface. The hyperbola is a uniformly accelerated worldline,
-and $\chi^a$ is the approximate boost Killing vector on $\cal H$.
 
 \end{document}
 
