--- a/hep-th-9306083/9306083.tex
+++ b/hep-th-9306083/9306083.tex
@@ -248,7 +248,6 @@ either by having the radiation initially aimed inward to collapse, or
 else
 by squeezing the box until the radiation suffers Jeans collapse.)
 
-\newpage
 	In the spirit of the hypothesis that no information is lost
 in black
 hole formation and evaporation, assume that the radiation subsystem
@@ -331,11 +330,9 @@ entropy $S_{m,n} = \ln m - I_{m,n}$, is plotted versus the subsystem
 thermodynamic entropy $\ln m$ in Fig. 1 for the case $mn=291600$,
 whose 105 integer divisors are taken to be the values of $m$.
 
-\vspace{1.5 cm}
+\begin{figure}[p]
 \centerline{\epsfbox{Fig1.eps}}
-\bigskip
-\noindent
-{\bf FIG.~1.  Average von Neumann or entanglement entropy $S_r  =
+\caption{Average von Neumann or entanglement entropy $S_r  =
 -\mathop{\hbox{tr}}_r (\rho_{r} \ln \rho_{r})$ and information
 $I_r = \ln m -S_r = s_r - S_r$ of a radiation subsystem of
 Hilbert-space dimension $m$ versus its thermodynamic entropy,
@@ -347,8 +344,8 @@ its product Hilbert space of fixed total dimension $mn$,
 here taken to be $2^4 3^6 5^2 = 291600\sim e^{4\pi}$
 (about the number of states very na\"{\i}vely expected for
 a black hole near the Planck mass).}
+\end{figure}
 
-\newpage
 	Eq. (7) means that for a typical pure quantum state of a
 joint
 system, the smaller subsystem is very nearly maximally mixed,
